--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "install": "^0.13.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   }
 }
