--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "parcel-bundler": "^1.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.23.0",
     "react-router-dom": "^6.22.3"
   },
   "main": "index.js"
