--- a/package.json
+++ b/package.json
@@ -34,5 +34,7 @@
     "react-router": "^6.23.0",
     "react-router-dom": "^6.22.3"
   },
-  "main": "index.js"
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
