--- a/package.json
+++ b/package.json
@@ -21,16 +21,23 @@
   },
   "homepage": "https://github.com/Dennis00725/react#readme",
   "devDependencies": {
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.25.0",
+    "@testing-library/react": "^16.0.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "parcel": "^2.12.0",
     "postcss": "^8.4.38",
     "process": "^0.11.10",
     "tailwindcss": "^3.4.3"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "install": "^0.13.0",
     "parcel-bundler": "^1.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router": "^6.23.0",
     "react-router-dom": "^6.22.3"
   },
